[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osint-intelligence"
version = "4.0.0"
description = "Enterprise-grade OSINT Framework for GitHub, Domain, and Breach reconnaissance with modular reporting."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Genesis GZ", email = "genzt.dev@pm.me"}
]
maintainers = [
    {name = "Genesis GZ", email = "genzt.dev@pm.me"}
]
keywords = [
    "osint",
    "cybersecurity",
    "reconnaissance",
    "threat-intelligence",
    "github-analysis",
    "breach-detection",
    "digital-forensics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Utilities"
]

dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "certifi>=2023.7.22"
]

[project.optional-dependencies]
ui = ["rich>=13.0.0"]
dns = ["dnspython>=2.3.0", "python-whois>=0.8.0"]
scraping = ["beautifulsoup4>=4.11.0", "lxml>=4.9.0"]
reports = ["jinja2>=3.1.0"]
full = [
    "rich>=13.0.0",
    "dnspython>=2.3.0",
    "python-whois>=0.8.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "jinja2>=3.1.0"
]

[project.urls]
"Homepage" = "https://github.com/GenesisGZ/osint-intelligence"
"Bug Tracker" = "https://github.com/GenesisGZ/osint-intelligence/issues"
"Documentation" = "https://github.com/GenesisGZ/osint-intelligence/wiki"

[project.scripts]
osint-cli = "osinth:main"

[tool.setuptools]
py-modules = ["osinth"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
