[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-intelligence"
version = "3.1.1"
authors = [
  { name="Genesis", email="genzt.dev@pm.me" },
]
description = "Professional Zero-API OSINT Framework for security researchers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.31.0",
    "dnspython>=2.6.0",
    "cryptography>=42.0.0",
    "rich>=13.7.0",
    "jinja2>=3.1.3",
]

[project.urls]
"Homepage" = "https://github.com/genesisgzdev/nexus-intelligence"
"Bug Tracker" = "https://github.com/genesisgzdev/nexus-intelligence/issues"

[project.scripts]
nexus-intel = "nexus_intelligence.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_intelligence*"]
exclude = ["tests*", "docs*"]
