[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-intelligence"
version = "3.2.0"
authors = [
  { name="Genesis", email="genzt.dev@pm.me" },
]
description = "Professional Zero-API OSINT Framework for security researchers"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
]
dependencies = [
    "curl_cffi>=0.7.0",
    "httpx[socks]>=0.27.0",
    "dnspython>=2.6.1",
    "cryptography>=42.0.5",
    "rich>=13.7.1",
    "jinja2>=3.1.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "stem>=1.8.2",
]

[project.urls]
"Homepage" = "https://github.com/genesisgzdev/nexus-intelligence"
"Bug Tracker" = "https://github.com/genesisgzdev/nexus-intelligence/issues"

[project.scripts]
nexus-intel = "nexus_intelligence.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus_intelligence*"]
exclude = ["tests*", "docs*"]
